--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string-array name="foods">
+    <string-array name="my_foods">
 
         <item>pizza</item>
         <item>choclate</item>
